YAML-Standard/fastapi-deployment.yaml
# yaml-standard/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: standard
spec:
  replicas: 3  # Adjust as needed
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: surabhiharsha5/fastapi:latest  # Make sure this matches your image
        ports:
        - containerPort: 5000
